<resources>
    <string name="app_name">Labs</string>
    <string name="hello_message">Hello World</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="loginName">Login Name</string>
    <string name="password">Password</string>
    <string name="radioButton">Radio Button</string>
    <string name="checkBox">Check Box</string>
    <string name="switchButton">What does this do?</string>
    <string name="dialog_message">Are you sure you want to exit</string>
    <string name="dialog_title">Confirm to exit</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="weather">Weather</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="AlertTitle2">Do you want to go back?</string>
    <string name="AlertTitle3">Set new text for the snackbar?</string>
    <string name="ImageDisc">This is the image of CANADA</string>
</resources>
