<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rajatkumar.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:layout_toRightOf="@+id/button"/>

    <Button
        android:id="@+id/buttonWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:layout_toRightOf="@+id/buttonChat" />

    <Button
        android:id="@+id/buttonToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test Toolbar"
        android:layout_below="@+id/button"/>
</RelativeLayout>
