<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.example.rajatkumar.androidlabs.LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/ImageDisc"
        android:src="@drawable/flag" />


    <EditText
        android:id="@+id/editText1"
        style="@style/editTextStyle"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="60dp"
        android:hint="@string/loginName"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_action_user"
        android:singleLine="false" />


    <EditText
        android:id="@+id/editText2"
        style="@style/editTextStyle"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="39dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_pass"
        />


    <Button
        android:id="@+id/button2"
        style="@style/buttonStyle"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/login" />
</RelativeLayout>
